html browser working with navigation call back class as parameter

--- a/Tests/TestPage/body.html
+++ b/Tests/TestPage/body.html
@@ -1,5 +1,5 @@
-<span class="red">Hello, </span>
-<span class="blue">World!</span><br>
-<span class="red">I love </span>
-<span class="blue">AutoHotkey!</span>
-<button onclick="showMessage()">Click Me</button>
+<span class="red">HTML</span>
+<span class="blue">TEST</span></br></br>
+<span class="green" id="date">test</span></br></br>
+<button id="counter" onclick="incrementVariable()">Incrementer</button></br></br>
+<button id="alerter" onclick="alertVariable()">Alerter</button>
